First pass at making CR manager configurable
unit tests for manageCrd; always adding CRD manifest to client

setting AWS_DEFAULT_REGION in the helm chart

e2e tests pass locally

first pass at e2e test

fixing e2e test; running tests for both settings

e2e tests work

Helm 2 and 3 friedly solution w/ sane default

externalsecrets and localstack have to be deleted btwn runs to avoid flakiness

sourcing from one location; proper helm v3 and v2 support

fixing crds template for v2

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,10 @@
 .env
 architecture.png
-charts
+charts/**/.helmignore
+charts/**/Chart.yaml
+charts/**/README.md
+charts/**/templates/
+charts/**/values.yaml
 coverage
 Dockerfile
 node_modules
