--- a/charts/kubernetes-external-secrets/crds/externalsecrets.kubernetes-client.io_externalsecrets_crd.yaml
+++ b/charts/kubernetes-external-secrets/crds/externalsecrets.kubernetes-client.io_externalsecrets_crd.yaml
@@ -1,7 +1,13 @@
+---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: externalsecrets.kubernetes-client.io
+  annotations:
+    # for helm v2 backwards compatibility
+    helm.sh/hook: crd-install
+    # used in e2e testing
+    app.kubernetes.io/managed-by: helm
 spec:
   group: kubernetes-client.io
   version: v1
@@ -9,21 +15,21 @@ spec:
 
   names:
     shortNames:
-    - es
+      - es
     kind: ExternalSecret
     plural: externalsecrets
     singular: externalsecret
 
   additionalPrinterColumns:
-  - JSONPath: .status.lastSync
-    name: Last Sync
-    type: date
-  - JSONPath: .status.status
-    name: status
-    type: string
-  - JSONPath: .metadata.creationTimestamp
-    name: Age
-    type: date
+    - JSONPath: .status.lastSync
+      name: Last Sync
+      type: date
+    - JSONPath: .status.status
+      name: status
+      type: string
+    - JSONPath: .metadata.creationTimestamp
+      name: Age
+      type: date
 
   validation:
     openAPIV3Schema:
@@ -105,9 +111,8 @@ spec:
                     - gcpSecretsManager
           anyOf:
             - required:
-              - data
+                - data
             - required:
-              - dataFrom
-
+                - dataFrom
   subresources:
     status: {}
