helm version and custom resource manager build matrix

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,11 +17,21 @@ jobs:
   test-e2e:
     runs-on: ubuntu-latest
     name: E2E
+    strategy:
+      matrix:
+        disableCustomResourceManager: [true, false]
+        helmVersion: [V2, V3]
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
         uses: actions/setup-node@v1
         with:
           node-version: 12
+      - uses: azure/setup-helm@v1
+        with:
+          version: 2.16.1
+        if: matrix.helmVersion == "V2"
       - run: npm install
-      - run: npm run test-e2e
+      - run: |
+        helm version
+        npm run test-e2e -- ${{ matrix.disableCustomResourceManager }} ${{ matrix.helmVersion }}
