--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 12
       - uses: azure/setup-helm@v1
         with:
-          version: 2.16.1
+          version: v2.16.1
         if: matrix.helmVersion == 'V2'
       - run: npm install
       - run: |
