--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,7 +31,8 @@ jobs:
         with:
           version: v2.16.1
         if: matrix.helmVersion == 'V2'
+      - name: configure helm v2
+        run: |
+          helm init --client-only
       - run: npm install
-      - run: |
-          helm version
-          npm run test-e2e -- ${{ matrix.disableCustomResourceManager }} ${{ matrix.helmVersion }}
+      - run: npm run test-e2e -- ${{ matrix.disableCustomResourceManager }} ${{ matrix.helmVersion }}
